--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 
 <body class="grey">
 <main>
-    <img class="image_index">
-    <img class="image_index">
     <div class="side">
         <div>
             <ul>
@@ -352,6 +350,8 @@
 
 
 <div id="artigo_1" class="artigo close">
+    <img class="image_index image_artigo" src="data/img/index/1/1_v.png">
+    <img class="image_index image_artigo" src="data/img/index/1/2_v.png">
     <div class="artigo_conteudo">
         <div class="titulo">
             <h1>Because it works.</h1>
@@ -382,6 +382,8 @@
 <!-- inicio do artigo 2-->
 
 <div id="artigo_2" class="artigo close">
+    <img class="image_index image_artigo" src="data/img/index/2/1_v.png">
+    <img class="image_index image_artigo" src="data/img/index/2/2_v.png">
     <div class="artigo_conteudo">
         <div class="titulo">
             <h1>Because you like its history.</h1>
@@ -413,6 +415,8 @@
 <!-- inicio do artigo 3-->
 
 <div id="artigo_3" class="artigo close">
+    <img class="image_index image_artigo" src="data/img/index/3/1.png">
+    <img class="image_index image_artigo" src="data/img/index/3/2.png">
     <div class="artigo_conteudo">
         <div class="titulo">
             <h1>Because you like its name.</h1>
@@ -441,6 +445,8 @@
 <!-- inicio do artigo 4-->
 
 <div id="artigo_4" class="artigo close">
+    <img class="image_index image_artigo" src="data/img/index/4/1_v.png">
+    <img class="image_index image_artigo" src="data/img/index/4/2_v.png">
     <div class="artigo_conteudo">
         <div class="titulo">
             <h1>Because of who designed it.</h1>
@@ -471,6 +477,8 @@
 <!-- inicio do artigo 5-->
 
 <div id="artigo_5" class="artigo close">
+    <img class="image_index image_artigo" src="data/img/index/5/1_v.png">
+    <img class="image_index image_artigo" src="data/img/index/5/2_v.png">
     <div class="artigo_conteudo">
         <div class="titulo">
             <h1>Because it was there.</h1>
@@ -501,6 +509,8 @@
 <!-- inicio do artigo 6-->
 
 <div id="artigo_6" class="artigo close">
+    <img class="image_index image_artigo" src="data/img/index/6/1.png">
+    <img class="image_index image_artigo" src="data/img/index/6/2.png">
     <div class="artigo_conteudo">
         <div class="titulo">
             <h1>Because they made you.</h1>
@@ -525,6 +535,8 @@
 <!-- inicio do artigo 7-->
 
 <div id="artigo_7" class="artigo close">
+    <img class="image_index image_artigo" src="data/img/index/7/1_v.png">
+    <img class="image_index image_artigo" src="data/img/index/7/2_v.png">
     <div class="artigo_conteudo">
         <div class="titulo">
             <h1>Because it reminds you of something.</h1>
@@ -553,6 +565,7 @@
 <!-- inicio do artigo 8-->
 
 <div id="artigo_8" class="artigo close">
+    <img class="image_index image_artigo" src="data/img/index/8/1.png">
     <div class="artigo_conteudo">
         <div class="titulo">
             <h1>Because it's beautiful.</h1>
@@ -577,6 +590,7 @@
 <!-- inicio do artigo 9-->
 
 <div id="artigo_9" class="artigo close">
+    <img class="image_index image_artigo" src="data/img/index/9/1.png">
     <div class="artigo_conteudo">
         <div class="titulo">
             <h1>Because it's ugly.</h1>
@@ -607,6 +621,8 @@
 <!-- inicio do artigo 10-->
 
 <div id="artigo_10" class="artigo close">
+    <img class="image_index image_artigo" src="data/img/index/10/1_v.png">
+    <img class="image_index image_artigo" src="data/img/index/10/2_v.png">
     <div class="artigo_conteudo">
         <div class="titulo">
             <h1>Because it's boring.</h1>
@@ -632,6 +648,7 @@
 <!-- inicio do artigo 11-->
 
 <div id="artigo_11" class="artigo close">
+    <img class="image_index image_artigo" src="data/img/index/11/1_v.png">
     <div class="artigo_conteudo">
         <div class="titulo">
             <h1>Because it's special.</h1>
@@ -659,6 +676,7 @@
 <!-- inicio do artigo 12-->
 
 <div id="artigo_12" class="artigo close">
+    <img class="image_index image_artigo" src="data/img/index/12/1.png">
     <div class="artigo_conteudo">
         <div class="titulo">
             <h1>Because you believe in it.</h1>
@@ -683,6 +701,8 @@
 <!-- inicio do artigo 13-->
 
 <div id="artigo_13" class="artigo close">
+    <img class="image_index image_artigo" src="data/img/index/13/1_v.png">
+    <img class="image_index image_artigo" src="data/img/index/13/2_v.png">
     <div class="artigo_conteudo">
         <div class="titulo">
             <h1>Because you can't not.</h1>
@@ -1285,7 +1305,6 @@
 
 </body>
 <script src="javaScript_2/text_holes.js"></script>
-<script src="javaScript/random_img.js"></script>
 <script src="javaScript_2/title.js"></script>
 <script src="javaScript/cube.js"></script>
 <script src="javaScript/page.js"></script>
@@ -1294,5 +1313,6 @@
 <script src="javaScript/emotion.js"></script>
 <script src="javaScript/seta.js"></script>
 <script src="javaScript/geral.js"></script>
+<script src="javaScript/random_img.js"></script>
 
 </html>
