--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>Alta&Baixa</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="javaScript/interact.min.js"></script>
+    <script src="javaScript/draggable.js"></script>
 </head>
 
 <body class="grey">
@@ -350,8 +352,8 @@
 
 
 <div id="artigo_1" class="artigo close">
-    <img class="image_index image_artigo" src="data/img/index/1/1_v.png">
-    <img class="image_index image_artigo" src="data/img/index/1/2_v.png">
+    <img class="image_index draggable image_artigo" src="data/img/index/1/1_v.png">
+    <img class="image_index draggable image_artigo" src="data/img/index/1/2_v.png">
     <div class="artigo_conteudo">
         <div class="titulo">
             <h1>Because it works.</h1>
@@ -382,8 +384,8 @@
 <!-- inicio do artigo 2-->
 
 <div id="artigo_2" class="artigo close">
-    <img class="image_index image_artigo" src="data/img/index/2/1_v.png">
-    <img class="image_index image_artigo" src="data/img/index/2/2_v.png">
+    <img class="image_index draggable image_artigo" src="data/img/index/2/1_v.png">
+    <img class="image_index draggable image_artigo" src="data/img/index/2/2_v.png">
     <div class="artigo_conteudo">
         <div class="titulo">
             <h1>Because you like its history.</h1>
@@ -415,8 +417,8 @@
 <!-- inicio do artigo 3-->
 
 <div id="artigo_3" class="artigo close">
-    <img class="image_index image_artigo" src="data/img/index/3/1.png">
-    <img class="image_index image_artigo" src="data/img/index/3/2.png">
+    <img class="image_index draggable image_artigo" src="data/img/index/3/1.png">
+    <img class="image_index draggable image_artigo" src="data/img/index/3/2.png">
     <div class="artigo_conteudo">
         <div class="titulo">
             <h1>Because you like its name.</h1>
@@ -445,8 +447,8 @@
 <!-- inicio do artigo 4-->
 
 <div id="artigo_4" class="artigo close">
-    <img class="image_index image_artigo" src="data/img/index/4/1_v.png">
-    <img class="image_index image_artigo" src="data/img/index/4/2_v.png">
+    <img class="image_index draggable image_artigo" src="data/img/index/4/1_v.png">
+    <img class="image_index draggable image_artigo" src="data/img/index/4/2_v.png">
     <div class="artigo_conteudo">
         <div class="titulo">
             <h1>Because of who designed it.</h1>
@@ -477,8 +479,8 @@
 <!-- inicio do artigo 5-->
 
 <div id="artigo_5" class="artigo close">
-    <img class="image_index image_artigo" src="data/img/index/5/1_v.png">
-    <img class="image_index image_artigo" src="data/img/index/5/2_v.png">
+    <img class="image_index draggable image_artigo" src="data/img/index/5/1_v.png">
+    <img class="image_index draggable image_artigo" src="data/img/index/5/2_v.png">
     <div class="artigo_conteudo">
         <div class="titulo">
             <h1>Because it was there.</h1>
@@ -509,8 +511,8 @@
 <!-- inicio do artigo 6-->
 
 <div id="artigo_6" class="artigo close">
-    <img class="image_index image_artigo" src="data/img/index/6/1.png">
-    <img class="image_index image_artigo" src="data/img/index/6/2.png">
+    <img class="image_index draggable image_artigo" src="data/img/index/6/1.png">
+    <img class="image_index draggable image_artigo" src="data/img/index/6/2.png">
     <div class="artigo_conteudo">
         <div class="titulo">
             <h1>Because they made you.</h1>
@@ -535,8 +537,8 @@
 <!-- inicio do artigo 7-->
 
 <div id="artigo_7" class="artigo close">
-    <img class="image_index image_artigo" src="data/img/index/7/1_v.png">
-    <img class="image_index image_artigo" src="data/img/index/7/2_v.png">
+    <img class="image_index draggable image_artigo" src="data/img/index/7/1_v.png">
+    <img class="image_index draggable image_artigo" src="data/img/index/7/2_v.png">
     <div class="artigo_conteudo">
         <div class="titulo">
             <h1>Because it reminds you of something.</h1>
@@ -565,7 +567,7 @@
 <!-- inicio do artigo 8-->
 
 <div id="artigo_8" class="artigo close">
-    <img class="image_index image_artigo" src="data/img/index/8/1.png">
+    <img class="image_index draggable image_artigo" src="data/img/index/8/1.png">
     <div class="artigo_conteudo">
         <div class="titulo">
             <h1>Because it's beautiful.</h1>
@@ -590,7 +592,7 @@
 <!-- inicio do artigo 9-->
 
 <div id="artigo_9" class="artigo close">
-    <img class="image_index image_artigo" src="data/img/index/9/1.png">
+    <img class="image_index draggable image_artigo" src="data/img/index/9/1.png">
     <div class="artigo_conteudo">
         <div class="titulo">
             <h1>Because it's ugly.</h1>
@@ -621,8 +623,8 @@
 <!-- inicio do artigo 10-->
 
 <div id="artigo_10" class="artigo close">
-    <img class="image_index image_artigo" src="data/img/index/10/1_v.png">
-    <img class="image_index image_artigo" src="data/img/index/10/2_v.png">
+    <img class="image_index draggable image_artigo" src="data/img/index/10/1_v.png">
+    <img class="image_index draggable image_artigo" src="data/img/index/10/2_v.png">
     <div class="artigo_conteudo">
         <div class="titulo">
             <h1>Because it's boring.</h1>
@@ -648,7 +650,7 @@
 <!-- inicio do artigo 11-->
 
 <div id="artigo_11" class="artigo close">
-    <img class="image_index image_artigo" src="data/img/index/11/1_v.png">
+    <img class="image_index draggable image_artigo" src="data/img/index/11/1_v.png">
     <div class="artigo_conteudo">
         <div class="titulo">
             <h1>Because it's special.</h1>
@@ -676,7 +678,7 @@
 <!-- inicio do artigo 12-->
 
 <div id="artigo_12" class="artigo close">
-    <img class="image_index image_artigo" src="data/img/index/12/1.png">
+    <img class="image_index draggable image_artigo" src="data/img/index/12/1.png">
     <div class="artigo_conteudo">
         <div class="titulo">
             <h1>Because you believe in it.</h1>
@@ -701,8 +703,8 @@
 <!-- inicio do artigo 13-->
 
 <div id="artigo_13" class="artigo close">
-    <img class="image_index image_artigo" src="data/img/index/13/1_v.png">
-    <img class="image_index image_artigo" src="data/img/index/13/2_v.png">
+    <img class="image_index draggable image_artigo" src="data/img/index/13/1_v.png">
+    <img class="image_index draggable image_artigo" src="data/img/index/13/2_v.png">
     <div class="artigo_conteudo">
         <div class="titulo">
             <h1>Because you can't not.</h1>
